--- a/Who.css
+++ b/Who.css
@@ -1,4 +1,4 @@
-/* * {
+* {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -95,4 +95,4 @@ h2 {
 	font-size: 1.15rem;
 	font-family: 'Lato', serif;
 	line-height: 1.5;
-} */
+}
