--- a/admin.css
+++ b/admin.css
@@ -141,121 +141,145 @@ body {
 .section-title {
 	text-transform: uppercase;
 	display: flex;
+	margin-top: 0.5%;
 	justify-content: center;
-	color: white;
-	font-size: 40px;
+	font-size: 2.5rem;
 	font-family: 'Arvo', serif;
+	/* color: #ff4742; */
+	font-weight: 900;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: #761512;
 	color: var(--main-red);
-	-webkit-text-stroke-width: 1.5px;
-	-webkit-text-stroke-color: black;
 }
-/* 
-.title-style {
-    background-image: url(/media/zigzag.svg);
-    background-position: 0 20%;
-    background-repeat: repeat-x;
+
+/* *.title-style {
+	content: '';
+	background-image: url(LosPollosImages-gif/zigzag.svg);
+	background-position: 0 200%;
+	background-repeat: repeat-x;
+	background-size: contain;
+	width: fit-content;
 } */
 
 .title-style {
-	display: block;
-	transform: translatey(200%);
+	/* display: block;
+	transform: translatey(200%); */
+	display: flex;
+	justify-content: left;
+	margin-left: 11%;
+	transform: translatey(220%);
+}*/
+
+#tenders img[src^='LosPoillosImages/chicken-tenders.webp'] {
+	height: 10rem;
 }
 
-#tenders img[src^='media/chicken-tenders.webp'] {
-	height: 5rem;
-}
-
-#apple img[src^='media/applepie.png'] {
-	height: 7rem;
-}
+/* .item-card [src^='media/applepie.png'] {
+	height: 10rem;
+} */
 
 .items-container {
-	display: flex;
-	flex: 2;
-	flex-wrap: wrap;
-	justify-content: center;
-	padding-top: 7%;
-	/* background-color: rgb(155, 35, 35); */
-	background-color: var(--warm-yellow);
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	gap: 2rem;
+	margin-left: 10rem;
+	margin-right: 10rem;
+	margin-top: 10%;
+	padding-bottom: 1rem;
+}
+
+.card-bottom {
+	padding-bottom: 3rem;
 }
 
 .item-card {
-	padding: 10px;
-	width: 20em;
-	height: 10em;
-	margin: 20px;
-	border-radius: 10px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-	overflow: hidden;
+	display: flex;
+	flex-direction: row;
+	background-color: white;
+	padding-left: 0.625rem;
+	border-radius: 0.625rem;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	transition: transform 0.4s ease;
-	background-color: #fff;
-	/* font-family: "Montserrat", sans-serif; */
-	font-family: 'Quicksand', serif;
+	width: 90%;
+	height: 13rem;
+	margin-right: 5rem;
 }
 
 .item-card:hover {
-	box-shadow: 0 0 0 0 50px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 0 0 0 3.125rem rgba(0, 0, 0, 0.2);
 	transform: scale(1.05);
 }
 
-.item-info {
-	display: flex;
-	flex-direction: column;
-	margin-top: 0.5em;
-}
-
 .menu-add {
-	margin-top: 2.5em;
-	margin-left: 3em;
-	font-family: 'Arvo', serif;
-	background-color: yellow;
-	border-style: 1px solid black !important;
-}
-
-.btn:hover {
+	margin-top: 0.9375rem;
+	background-color: #666;
+	width: 6.25rem;
+	display: block;
+	position: absolute;
+	/* transform: translateY(220%); */
+	background: var(--main-red);
+	border: .0625rem solid var(--main-red);
+	border-radius: .375rem;
+	box-shadow: rgba(0, 0, 0, 0.1) .0625rem .125rem .25rem;
+	color: #ffffff;
 	cursor: pointer;
-	/* transform: scale(1.05); */
+	font-family: 'Monsterrat', sans-serif;
+	font-size: .75rem;
+	font-weight: 800;
+	min-height: 2.5rem;
+	padding: .75rem .875rem;
+	text-align: center;
 }
 
-.price {
-	margin-top: 1em;
-	margin-left: 0.5em;
-	transform: translateY(-15%);
+.menu-add:hover {
+	background: #cd3530;
+	transition: 0.2s;
+}
+
+.item-info {
+	margin-top: 2rem;
+	margin-left: 1.25rem;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	width: 17.5rem;
+	font-family: 'Montserrat', serif;
+	font-size: 1rem;
+}
+.item-card img {
+	margin-top: .9375rem;
+	padding-top: .3125rem;
+	height: 10rem;
+	width: 10rem;
+	object-fit: contain;
+}
+
+.item-info p {
+	color: #737272;
+	line-height: 1.2;
+	margin-top: 0.5rem;
+}
+
+.item-header {
+	font-weight: 600;
 }
 
 .item-description {
-	color: var(--light-grey);
-	max-width: 250px;
-	overflow: hidden;
-	font-size: 14px;
-	text-wrap: wrap;
+	font-size: .8125rem;
 }
 
-.item-img {
-	float: right;
-	transform: translatey(-120%);
+#desserts img[src='LosPollosImages-gif/applepie.png'] {
+	height: 10rem;
+	width: 8rem;
+	object-fit: cover;
 }
 
-.item-img img {
-	height: 120px;
-	width: auto;
-	object-fit: fit;
+#desserts img[src='LosPollosImages-gif/frenchstix.png'] {
+	object-fit: cover;
+	height: 6.25rem;
+	width: 8rem;
+	transform: translateY(3.125rem);
 }
-
-.item-img img[src^='media/huevosrancheros.png'] {
-	height: 2px;
-}
-
-.item-info {
-	display: flex;
-}
-
-.btn {
-	padding: 10px;
-	border-radius: 6px;
-	/* border-style:  none; */
-}
-
 /* -------------------------------- backtotop ------------------------------- */
 #topBtn {
 	display: none;
@@ -294,12 +318,12 @@ body {
 }
 
 
-.item-info button {
-   background-color: var(--main-red);
-   width: 20px;
-   height: 20px;
+.item-info .DeleteBtn {
+	display: flex;
+	outline:none;
+   background-color: var(--warm-blue);
+   justify-self: flex-end;
    margin-left: -10px;
-   
    cursor: pointer;
   
 }
