--- a/Who.css
+++ b/Who.css
@@ -90,7 +90,7 @@ body {
 	place-content: center;
 	/* margin-top: 20px;
 	margin-bottom: 20px; */
-	background-image: url('https://mir-s3-cdn-cf.behance.net/project_modules/1400/02117356571847.5a81a435b1c26.jpg');
+	background-image: url('media/whoback.jpg');
 	background-position: 0 50%;
 	background-size: cover;
 	padding-top: 20px;
