--- a/catering-form.css
+++ b/catering-form.css
@@ -12,7 +12,7 @@ body {
 	place-content: center;
 	/* margin-top: 20px;
 	margin-bottom: 20px; */
-	background-image: url('media/header.jpg');
+	background-image: url('LosPollosImages-gif/header.jpg');
 	background-position: 0 50%;
 	background-size: cover;
 	padding-top: 20px;
