--- a/MenuPage.css
+++ b/MenuPage.css
@@ -83,15 +83,13 @@ body {
 	border: none;
 	color: white;
 	padding: 10px;
-	font-family: 'Lato', serif;
-	font-weight: 600;
 }
 #Searchbar::placeholder {
-	/* color: hsl(0, 0%, 70%); */
-	color: white;
+	color: hsl(0, 0%, 70%);
 }
 #Searchbar:focus {
-	/* border: solid yellow; */
+	outline: none;
+	border: none;
 	/* background-color: none; */
 }
 #UserProf,
@@ -387,109 +385,220 @@ ion-icon {
 /*                                Modal pop up                              */
 /* -------------------------------------------------------------------------- */
 @keyframes animateTop {
-	from{top:-18.75rem;
-		 opacity: 0;}
-	to{top:0;
-	   opacity:1;}
-	
-  }
-  .popup-container{
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+.popup-container {
 	margin: 6.5% 37%;
-	animation: animateTop 0.8s ;
-  
-  }
-  .modal{
+	animation: animateTop 0.8s;
+}
+.modal {
 	z-index: 1001;
-	display:none;
-	position:fixed;
+	display: none;
+	position: fixed;
 	/* overflow: scroll; */
-	top:50%;
-	left:50%;
-	transform: translate( -50%, -50%);
-	width:100%;
-	height:100%;
-	background-color:hsl(0, 0%, 0%, 0.4)
-  }
-  .Main-Loc-container{
-	display:flex;
-	flex-direction: column;
-	height:8rem;
-  }
-  .Address-Container,.City-State{
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	background-color: hsl(0, 0%, 0%, 0.4);
+}
+.popup-card {
 	display: flex;
-	column-gap: 5%;
-	height:3rem
-
-  }
-  
-  .Zip-Container{
-	flex-direction: column;
-  }
-  .popup-card{
-	display: flex;
+	/* overflow: scroll; */
 	flex-direction: column;
 	align-items: center;
 	margin: 5% auto;
 	background-color: hsl(0, 0%, 97%);
-	height:31.25rem;
-	width:25rem;
-	padding:6%;
+	height: 41.25rem;
+	width: 350px;
+	padding: 6%;
 	border-radius: 20px;
-	row-gap:20px
-  }
-  .popup-head{
+	row-gap: 20px;
+}
+.popup-head {
 	display: flex;
+	justify-content: center;
 	flex-direction: row;
-	gap:200px;
-  }
-  .Closebtn{
+	gap: 200px;
+}
+.popup-head h5 {
+	font-family: 'Arvo', 'Lato', serif;
+	justify-self: center;
+	transform: translate(7rem, 0%);
+	font-size: 1.6rem;
+	font-weight: 600;
+	width: max-content;
+	text-transform: uppercase;
+}
+
+.Closebtn {
 	background-color: transparent;
-	border:none;
-	width:20px;
+	border: none;
+	width: 20px;
 	font-size: 30px;
-  }
-  .P-D-btns{
+	transform: translate(-3.5rem, -1rem);
+	color: #b3b2b2;
+}
+
+.P-D-btns {
 	background-color: transparent;
-	border:none;
-  }
-  .popup-card button:hover{
+	border: none;
+}
+.popup-card button:hover {
 	cursor: pointer;
-  }
-  .P-D-btns-container{
+}
+.P-D-btns-container {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	padding:3%;
-	background-color:hsl(0, 0%, 70%);
+	padding: 3%;
+	/* background-color: hsl(0, 0%, 70%); */
 	border-radius: 20px;
-  }
-  .form-container{
+}
+
+.P-D-btns-container::after {
+	background-color: yellow;
+}
+
+.info-txt {
+	color: #333;
+	font-family: 'Lato', serif;
+}
+
+/* -------------------------------- ToggleBtn ------------------------------- */
+.toggleCheckbox {
+	display: none;
+}
+
+.toggleContainer {
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	width: 100%;
+	height: 2.5rem;
+	border: 3px solid red;
+	border-radius: 20px;
+	background: white;
+	padding-bottom: 5%;
+	font-weight: bold;
+	color: #343434;
+	cursor: pointer;
+	font-family: 'Arvo', serif;
+	text-transform: uppercase;
+}
+
+.toggleContainer::before {
+	content: '';
+	position: absolute;
+	width: 50%;
+	height: 100%;
+	left: 0%;
+	border-radius: 20px;
+	background: #f2022f;
+	transition: all 0.3s;
+}
+
+.toggleContainer div {
+	padding: 6px;
+	text-align: center;
+	z-index: 1;
+}
+
+.toggleCheckbox:checked + .toggleContainer::before {
+	left: 50%;
+}
+
+.toggleCheckbox:checked + .toggleContainer div:first-child {
+	color: #f2022f;
+	transition: color 0.3s;
+}
+.toggleCheckbox:checked + .toggleContainer div:last-child {
+	color: white;
+	transition: color 0.3s;
+}
+.toggleCheckbox + .toggleContainer div:first-child {
+	color: white;
+	transition: color 0.3s;
+}
+.toggleCheckbox + .toggleContainer div:last-child {
+	color: #f2022f;
+	transition: color 0.3s;
+}
+
+/* ------------------------------ ToggleBtn End ----------------------------- */
+
+.form-container {
 	display: flex;
 	flex-direction: column;
-	row-gap:20px
+	row-gap: 20px;
+	font-family: 'Lato', serif;
+
 	/* height:100%; */
-  }
-   .form-container input, .form-container select{
-	border:none;
+}
+.form-container input,
+.form-container select {
+	border: none;
 	background-color: hsl(0, 0%, 89%);
-	width:100%;
+	width: 100%;
 	border-radius: 20px;
-	padding:2%;
-  }
-  option:value{
+	padding: 2%;
+	font-family: 'Lato', serif;
+	margin-top: 5px;
+	color: grey;
+}
+
+.form-container input {
+	font-size: 1.15rem;
+}
+
+.form-container select {
+	font-size: 1rem;
+}
+input[type='text'] {
+	font-size: 1rem;
+}
+
+.form-container h4 {
+	color: #333;
+}
+
+option:value {
 	color: hsl(0, 0%, 70%);
-  }
-  .Update-btn{
+}
+.Update-Btn {
 	/* display: flex; */
-  
-	background-color: #f2e205;
-	width:80%;
-  
+	/* background-color: #f2e205; */
+	background-color: #f2022f;
+	color: white;
+	font-family: 'Arvo', serif;
+	margin-top: 1rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 1rem;
+	padding: 5%;
+	width: 80%;
 	height: fit-content;
-	padding:3%;
-	border:none;
+	padding: 3%;
+	border: none;
 	border-radius: 20px;
-  }
+}
+
+.Update-Btn:hover {
+	/* background-color: #ddcf07; */
+	background-color: #d20329;
+}
+.Update-Btn:active {
+	/* background-color: #ccbf08; */
+	background-color: #99041f;
+}
 /* ---------------------------------------------------- */
 /* ------               Footer Section       ---------- */
 /* ---------------------------------------------------- */
