--- a/catering-form.css
+++ b/catering-form.css
@@ -1,8 +1,39 @@
-body {
-	font-family: 'Arial', sans-serif;
+* {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+}
+
+html,
+body {
+	width: 100%;
+	overflow-x: hidden;
+}
+
+/* h3 {
+	font-family: 'Goblin One', serif;
+	font-weight: 400;
+	font-style: normal;
+	color: #f20530;
+} */
+
+h3 {
+	font-family: 'Arvo', serif;
+	font-weight: 700;
+	line-height: 1.5;
+	font-style: normal;
+	color: #f20530;
+}
+
+p {
+	font-family: 'Lato', serif;
+	font-weight: 400;
+	font-style: normal;
+}
+a {
+	font-family: 'Lato', serif;
+	font-weight: 600;
+	font-style: normal;
 }
 
 /* ------------------------------- CTA Section ------------------------------ */
@@ -10,8 +41,6 @@ body {
 .cta {
 	display: flex;
 	place-content: center;
-	/* margin-top: 20px;
-	margin-bottom: 20px; */
 	background-image: url('LosPollosImages-gif/header.jpg');
 	background-position: 0 50%;
 	background-size: cover;
@@ -45,15 +74,13 @@ body {
 }
 
 .cta-inner button {
-	/* transform: translate(-150px, -50px); */
-	transform: translateY(-50px);
 	font-size: 30px;
 	padding: 1rem;
 	width: 20rem;
-	border-radius: 8px;
+	border-radius: .8rem;
 	transition: background-color 0.5s ease;
 	font-weight: 700;
-	border: 4px solid white;
+	border: .25rem solid white;
 	background-color: #f2022f;
 	color: white;
 	text-transform: uppercase;
@@ -77,11 +104,13 @@ body {
 	transition: 0s;
 }
 
-/* --------------------------------- Navigation --------------------------------- */
+/* ---------------------------------------------------- */
+/* ------               Header Section       ----------*/
+/* ---------------------------------------------------- */
+
 #logo {
 	width: 100px;
 }
-
 .header {
 	display: flex;
 	flex-direction: row;
@@ -110,10 +139,20 @@ body {
 	color: white;
 	background-color: transparent;
 	border: none;
+	font-family: 'Lato', serif;
+	font-weight: 600;
+	font-style: normal;
+	font-size: medium;
 }
 .Modalbutton ion-icon {
 	color: #f2e205;
 }
+
+.Modalbutton:hover {
+	color: #f2e205;
+	cursor: pointer;
+}
+
 #Searchbar {
 	border-radius: 20px;
 	background-color: hsl(349, 96%, 45%);
@@ -127,7 +166,6 @@ body {
 #Searchbar:focus {
 	outline: none;
 	border: none;
-	/* background-color: none; */
 }
 #UserProf,
 #Cart {
@@ -136,18 +174,19 @@ body {
 }
 #Navbtn {
 	display: flex;
-	color: hsl(100, 100%, 100%);
 	background-color: #f2e205;
 	justify-content: center;
 	border-radius: 10px;
 	width: 120px;
 	padding: 3%;
+	color: rgb(205, 89, 0);
+	font-weight: 900;
 }
 #Navbtn:hover {
-	color: black;
+	color: rgb(205, 89, 0);
 	transform: scale(1.2);
 	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
-	transition: 0.9s;
+	transition: 0.4s;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -169,6 +208,7 @@ body {
 
 .info-inner {
 	width: 50%;
+	padding:2%;
 }
 
 .info-description {
@@ -209,10 +249,6 @@ body {
 	grid-template-columns: 2, 1fr;
 }
 
-.flex {
-	/* display: flex; */
-}
-
 .form-section img {
 	height: 10rem;
 	width: 7rem;
@@ -228,7 +264,7 @@ body {
 	text-align: center;
 }
 
-.form-container {
+.form-containerCat {
 	max-width: 1000px;
 	width: 100%;
 	background-color: white;
@@ -237,7 +273,7 @@ body {
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.form-container h2 {
+.form-containerCat h2 {
 	font-size: 2.3em;
 	color: #d71d3f;
 	margin-bottom: 15px;
@@ -245,7 +281,7 @@ body {
 	text-transform: uppercase;
 }
 
-.form-container p {
+.form-containerCat p {
 	font-size: 1.2em;
 	color: #777;
 	margin-bottom: 30px;
@@ -264,14 +300,14 @@ body {
 	align-items: flex-start;
 }
 
-label {
+.form-group label {
 	font-size: 1em;
 	margin-bottom: 8px;
 	color: #333;
 }
 
-input,
-select {
+.form-group input,
+.form-group select {
 	font-size: 1em;
 	padding: 10px;
 	border: 1px solid #ddd;
@@ -280,8 +316,8 @@ select {
 	background-color: #f9f9f9;
 }
 
-input:focus,
-select:focus {
+.form-group input:focus,
+.form-group select:focus {
 	border-color: #d71d3f;
 	outline: none;
 }
@@ -314,14 +350,231 @@ select:focus {
 	font-weight: 800;
 }
 
-.form-container a {
+.form-containerCat a {
 	color: #d71d3f;
 }
 
 .cta-button:hover {
 	background: #d03934;
+} 
+/* -------------------------------------------------------------------------- */
+/*                                Modal pop up                              */
+/* -------------------------------------------------------------------------- */
+@keyframes animateTop {
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+.popup-container {
+	margin: 6.5% 37%;
+	animation: animateTop 0.8s;
+}
+.modal {
+	z-index: 1001;
+	display: none;
+	position: fixed;
+	/* overflow: scroll; */
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	background-color: hsl(0, 0%, 0%, 0.4);
+}
+.popup-card {
+	display: flex;
+	/* overflow: scroll; */
+	flex-direction: column;
+	align-items: center;
+	margin: 5% auto;
+	background-color: hsl(0, 0%, 97%);
+	height: 41.25rem;
+	width: 350px;
+	padding: 6%;
+	border-radius: 20px;
+	row-gap: 20px;
+}
+.popup-head {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	gap: 200px;
+}
+.popup-head h5 {
+	font-family: 'Arvo', 'Lato', serif;
+	justify-self: center;
+	transform: translate(7rem, 0%);
+	font-size: 1.6rem;
+	font-weight: 600;
+	width: max-content;
+	text-transform: uppercase;
 }
 
+.Closebtn {
+	background-color: transparent;
+	border: none;
+	width: 20px;
+	font-size: 30px;
+	transform: translate(-3.5rem, -1rem);
+	color: #b3b2b2;
+}
+
+.P-D-btns {
+	background-color: transparent;
+	border: none;
+}
+.popup-card button:hover {
+	cursor: pointer;
+}
+.P-D-btns-container {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	padding: 3%;
+	/* background-color: hsl(0, 0%, 70%); */
+	border-radius: 20px;
+}
+
+.P-D-btns-container::after {
+	background-color: yellow;
+}
+
+.info-txt {
+	color: #333;
+	font-family: 'Lato', serif;
+}
+
+/* -------------------------------- ToggleBtn ------------------------------- */
+.toggleCheckbox {
+	display: none;
+}
+
+.toggleContainer {
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	width: 100%;
+	height: 2.5rem;
+	border: 3px solid red;
+	border-radius: 20px;
+	background: white;
+	padding-bottom: 5%;
+	font-weight: bold;
+	color: #343434;
+	cursor: pointer;
+	font-family: 'Arvo', serif;
+	text-transform: uppercase;
+}
+
+.toggleContainer::before {
+	content: '';
+	position: absolute;
+	width: 50%;
+	height: 100%;
+	left: 0%;
+	border-radius: 20px;
+	background: #f2022f;
+	transition: all 0.3s;
+}
+
+.toggleContainer div {
+	padding: 6px;
+	text-align: center;
+	z-index: 1;
+}
+
+.toggleCheckbox:checked + .toggleContainer::before {
+	left: 50%;
+}
+
+.toggleCheckbox:checked + .toggleContainer div:first-child {
+	color: #f2022f;
+	transition: color 0.3s;
+}
+.toggleCheckbox:checked + .toggleContainer div:last-child {
+	color: white;
+	transition: color 0.3s;
+}
+.toggleCheckbox + .toggleContainer div:first-child {
+	color: white;
+	transition: color 0.3s;
+}
+.toggleCheckbox + .toggleContainer div:last-child {
+	color: #f2022f;
+	transition: color 0.3s;
+}
+
+/* ------------------------------ ToggleBtn End ----------------------------- */
+
+.form-container {
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+	font-family: 'Lato', serif;
+
+	/* height:100%; */
+}
+.form-container input,
+.form-container select {
+	border: none;
+	background-color: hsl(0, 0%, 89%);
+	width: 100%;
+	border-radius: 20px;
+	padding: 2%;
+	font-family: 'Lato', serif;
+	margin-top: 5px;
+	color: grey;
+}
+
+.form-container input {
+	font-size: 1.15rem;
+}
+
+.form-container select {
+	font-size: 1rem;
+}
+input[type='text'] {
+	font-size: 1rem;
+}
+
+.form-container h4 {
+	color: #333;
+}
+
+option:value {
+	color: hsl(0, 0%, 70%);
+}
+.Update-Btn {
+	/* display: flex; */
+	/* background-color: #f2e205; */
+	background-color: #f2022f;
+	color: white;
+	font-family: 'Arvo', serif;
+	margin-top: 1rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 1rem;
+	padding: 5%;
+	width: 80%;
+	height: fit-content;
+	padding: 3%;
+	border: none;
+	border-radius: 20px;
+}
+
+.Update-Btn:hover {
+	/* background-color: #ddcf07; */
+	background-color: #d20329;
+}
+.Update-Btn:active {
+	/* background-color: #ccbf08; */
+	background-color: #99041f;
+}
 /* ---------------------------------------------------- */
 /* ------               Footer Section       ---------- */
 /* ---------------------------------------------------- */
