--- a/rewards.css
+++ b/rewards.css
@@ -1,52 +1,56 @@
+/* ---------------------------------------------------- */
+/* ------               Universal             ----------*/
+/* ---------------------------------------------------- */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
+html,
 body {
-    background-color: #6c95e7;
-    
+	width: 100%;
+	overflow-x: hidden;
 }
 
-h1 {
-    text-align: center;
-    margin-top: 50px;
-    font-size: 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: #F2E205;
-    
-    text-shadow: 1px 1px 1px black;
+/* h3 {
+	font-family: 'Goblin One', serif;
+	font-weight: 400;
+	font-style: normal;
+	color: #f20530;
+} */
+
+h3 {
+	font-family: 'Arvo', serif;
+	font-weight: 700;
+	line-height: 1.5;
+	font-style: normal;
+	color: #f20530;
 }
 
-
-
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px;
-    width: 100%;
-    
+p {
+	font-family: 'Lato', serif;
+	font-weight: 400;
+	font-style: normal;
 }
-
-main {
-    text-align: center;
+a {
+	font-family: 'Lato', serif;
+	font-weight: 600;
+	font-style: normal;
 }
-
-h1 {
-    font-size: 2.5rem;
-    color: #F2E205;
-    text-shadow: 1px 1px 1px black;
-    margin-bottom: 20px;
+@keyframes fadein {
+	/* animation*/
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
+/* ---------------------------------------------------- */
+/* ------               Header Section       ----------*/
+/* ---------------------------------------------------- */
 
-.logo img {
-    width: 100px;
-    height: 100px;
-    margin-left: 670px;
-    margin-top: -100px
-}
 #logo {
 	width: 100px;
 }
@@ -98,15 +102,13 @@ h1 {
 	border: none;
 	color: white;
 	padding: 10px;
-	font-family: 'Lato', serif;
-	font-weight: 600;
 }
 #Searchbar::placeholder {
-	/* color: hsl(0, 0%, 70%); */
-	color: white;
+	color: hsl(0, 0%, 70%);
 }
 #Searchbar:focus {
-	/* border: solid yellow; */
+	outline: none;
+	border: none;
 	/* background-color: none; */
 }
 #UserProf,
@@ -197,6 +199,7 @@ ion-icon {
 	border-style: none;
 	cursor: pointer;
 	margin-left: -20px;
+	
 }
 
 .rewards-container {
@@ -205,8 +208,12 @@ ion-icon {
     align-items: center;
     gap: 40px;
     text-align: center;
+	background-color:#05C7F2;
+	padding:10%;
 }
-
+.rewards-container h3{
+	font-size: 5rem;
+}
 .reward {
     max-width: 800px;
     text-align: center;
