--- a/catering.css
+++ b/catering.css
@@ -1,6 +1,9 @@
 /* -------------------------------------------------------------------------- */
 /*                                 Universals                                 */
 /* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/*                                 Universals                                 */
+/* -------------------------------------------------------------------------- */
 * {
 	margin: 0;
 	padding: 0;
@@ -16,7 +19,7 @@ html {
 	--dark-blue: #021f59;
 	--teal: #05c7f2;
 	--warm-blue: #4aa3e3;
-	--main-red: #f2022f;
+	--main-red: #f20519;
 	--secondary-red: #f20530;
 	--main-yellow: #f2e205;
 	--warm-yellow: #f0af02;
@@ -172,19 +175,13 @@ body {
 }
 
 .menu-nav a {
+	text-decoration: none;
 	color: white;
-	padding: 10px 15px;
-	padding-top: 10px;
-	padding-bottom: 10px;
 }
 
 .menu-nav a:hover {
 	border-bottom: 3px solid white;
 	transition: 0.3s;
-}
-
-.menu-nav a {
-	text-decoration: none;
 }
 
 .location-button {
@@ -230,116 +227,13 @@ ion-icon {
 	display: flex;
 	margin-top: 0.5%;
 	justify-content: center;
-	font-size: 40px;
+	font-size: 2.5rem;
 	font-family: 'Arvo', serif;
-	/* color: #ff4742; */
 	font-weight: 900;
 	-webkit-text-stroke-width: 1px;
 	-webkit-text-stroke-color: #761512;
 	color: var(--main-red);
 }
-
-.price {
-	font-weight: 300;
-}
-
-.menu-heading {
-	display: flex;
-	flex-direction: column;
-	place-content: center;
-	transform: translatey(5rem);
-	margin-left: 10%;
-	background-color: white;
-	width: 900px;
-	padding: 40px 30px;
-	border-radius: 8px;
-	border: solid red;
-	border-width: 4px;
-
-	font-size: 30px;
-
-	font-family: 'Arvo', serif;
-	/* color: #ff4742; */
-	font-weight: 900;
-	-webkit-text-stroke-width: 1px;
-	-webkit-text-stroke-color: #761512;
-
-}
-
-.catering-title {
-	text-transform: capitalize;
-	color: white;
-	font-size: 40px;
-	font-weight: 600;
-	font-family: 'Rum Raisin', serif;
-	letter-spacing: 3px;
-	text-transform: uppercase;
-	color: var(--main-red);
-
-}
-
-.price {
-	font-weight: 300;
-
-}
-
-
-.menu-heading p {
-	color: rgb(109, 109, 109);
-
-	font-size: 1.2rem;
-	font-family: 'Quicksand', sans-serif;
-}
-
-.menu-heading a {
-	color: var(--main-red);
-
-}
-
-
-.menu-heading {
-	display: flex;
-	flex-direction: column;
-	place-content: center;
-	transform: translatey(5rem);
-	margin-left: 10%;
-	background-color: white;
-	width: 900px;
-	padding: 40px 30px;
-	border-radius: 8px;
-	border: solid red;
-	border-width: 4px;
-}
-
-.catering-title {
-	text-transform: capitalize;
-	color: white;
-	font-size: 40px;
-	font-weight: 600;
-	font-family: 'Rum Raisin', serif;
-	letter-spacing: 3px;
-	text-transform: uppercase;
-	color: var(--main-red);
-}
-
-.menu-heading p {
-	color: rgb(109, 109, 109);
-	font-size: 1.2rem;
-	font-family: 'Quicksand', sans-serif;
-}
-
-.menu-heading a {
-	color: var(--main-red);
-	font-weight: 400;
-	text-decoration: none;
-}
-
-
-.menu-heading a:hover {
-	color: #da3530;
-	transition: 5ms;
-}
-
 .title-style {
 	display: flex;
 	justify-content: left;
@@ -356,83 +250,137 @@ ion-icon {
 	margin-top: 10%;
 	padding-bottom: 1rem;
 }
-
 .card-bottom {
-	padding-bottom: 3rem;
+	padding-bottom: .25rem;
 }
 
 .item-card {
 	display: flex;
 	flex-direction: row;
 	background-color: white;
-	padding-left: 10px;
-	border-radius: 10px;
+	padding-left: 0.625rem;
+	border-radius: 0.625rem;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 	transition: transform 0.4s ease;
 	width: 90%;
-	height: 13rem;
+	height: 14rem;
 	margin-right: 5rem;
 }
 
 .item-card:hover {
-	box-shadow: 0 0 0 0 50px rgba(0, 0, 0, 0.2);
+	box-shadow: 0 0 0 0 3.125rem rgba(0, 0, 0, 0.2);
 	transform: scale(1.05);
 }
-
-.order-btn {
-	margin-top: 15px;
+.menu-add {
+	margin-top: 0.9375rem;
 	background-color: #666;
-	width: 100px;
+	width: 6.25rem;
 	display: block;
 	position: absolute;
 	/* transform: translateY(220%); */
 	background: var(--main-red);
-	border: 1px solid var(--main-red);
-	border-radius: 6px;
-	box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+	border: .0625rem solid var(--main-red);
+	border-radius: .375rem;
+	box-shadow: rgba(0, 0, 0, 0.1) .0625rem .125rem .25rem;
 	color: #ffffff;
 	cursor: pointer;
 	font-family: 'Monsterrat', sans-serif;
-	font-size: 12px;
+	font-size: .75rem;
 	font-weight: 800;
-	min-height: 40px;
-	padding: 12px 14px;
+	min-height: 2.5rem;
+	padding: .75rem .875rem;
 	text-align: center;
 }
 
-.order-btn:hover {
+.menu-add:hover {
 	background: #cd3530;
 	transition: 0.2s;
 }
 
+.catering-title {
+	text-transform: capitalize;
+	color: white;
+	font-size: 40px;
+	font-weight: 600;
+	font-family: 'Rum Raisin', serif;
+	letter-spacing: 3px;
+	text-transform: uppercase;
+	color: var(--main-red);
+
+}
+
+.price {
+	font-weight: 300;
+
+}
+
+
+.menu-heading p {
+	color: rgb(109, 109, 109);
+
+	font-size: 1.2rem;
+	font-family: 'Quicksand', sans-serif;
+}
+
+.menu-heading a {
+	color: var(--main-red);
+
+}
+
+
+.menu-heading {
+	display: flex;
+	flex-direction: column;
+	place-content: center;
+	transform: translatey(5rem);
+	margin-left: 10%;
+	background-color: white;
+	width: 900px;
+	padding: 40px 30px;
+	border-radius: 8px;
+	border: solid red;
+	border-width: 4px;
+	font-size: 30px;
+	font-family: 'Arvo', serif;
+	
+	font-weight: 900;
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: #761512;
+
+}
+
+.menu-heading a:hover {
+	color: #da3530;
+	transition: 5ms;
+}
 .item-info {
-	margin-top: 2rem;
-	margin-left: 20px;
+	padding-top: 2rem;
+	margin-left: 1.25rem;
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: column;
-	width: 280px;
+	width: 17.5rem;
+	max-height:13rem;
 	font-family: 'Montserrat', serif;
 	font-size: 1rem;
 }
-.item-info img {
-	height: 5rem;
-	width: 5rem;
-	object-fit: fill;
+.item-card img {
+	margin-top: .9375rem;
+	padding-top: .3125rem;
+	height: 8rem;
+	/* width: 8rem; */
+	object-fit: contain;
 }
 
 .item-info p {
 	color: #737272;
 	line-height: 1.2;
 	margin-top: 0.5rem;
+	font-size: 13px;
 }
 
 .item-header {
 	font-weight: 600;
-}
-
-.item-description {
-	font-size: 13px;
 }
 
 /* -------------------------------- backtotop ------------------------------- */
