Fixed menu in managerMode and the fix the edit-add-delete buttons

--- a/MenuPage.css
+++ b/MenuPage.css
@@ -202,7 +202,10 @@ ion-icon {
 /* -------------------------------------------------------------------------- */
 /*                                 Card Styles                                */
 /* -------------------------------------------------------------------------- */
-
+.selection{
+	padding-top: 2%;
+	padding-bottom: 2%;
+}
 .section-title {
 	text-transform: uppercase;
 	display: flex;
