--- a/MenuPage.css
+++ b/MenuPage.css
@@ -90,10 +90,7 @@ body {
 	/* color: hsl(0, 0%, 70%); */
 	color: white;
 }
-#Searchbar:focus {
-	/* border: solid yellow; */
-	/* background-color: none; */
-}
+
 #UserProf,
 #Cart {
 	font-size: 30px;
@@ -285,16 +282,16 @@ ion-icon {
 	position: absolute;
 	/* transform: translateY(220%); */
 	background: var(--main-red);
-	border: .0625rem solid var(--main-red);
-	border-radius: .375rem;
-	box-shadow: rgba(0, 0, 0, 0.1) .0625rem .125rem .25rem;
+	border: 0.0625rem solid var(--main-red);
+	border-radius: 0.375rem;
+	box-shadow: rgba(0, 0, 0, 0.1) 0.0625rem 0.125rem 0.25rem;
 	color: #ffffff;
 	cursor: pointer;
 	font-family: 'Monsterrat', sans-serif;
-	font-size: .75rem;
+	font-size: 0.75rem;
 	font-weight: 800;
 	min-height: 2.5rem;
-	padding: .75rem .875rem;
+	padding: 0.75rem 0.875rem;
 	text-align: center;
 }
 
@@ -314,8 +311,8 @@ ion-icon {
 	font-size: 1rem;
 }
 .item-card img {
-	margin-top: .9375rem;
-	padding-top: .3125rem;
+	margin-top: 0.9375rem;
+	padding-top: 0.3125rem;
 	height: 10rem;
 	width: 10rem;
 	object-fit: contain;
@@ -332,7 +329,7 @@ ion-icon {
 }
 
 .item-description {
-	font-size: .8125rem;
+	font-size: 0.8125rem;
 }
 
 #desserts img[src='LosPollosImages-gif/applepie.png'] {
@@ -361,7 +358,7 @@ ion-icon {
 	cursor: pointer;
 	font-size: 1rem;
 	font-weight: 800;
-	padding: .938rem 1.25rem;
+	padding: 0.938rem 1.25rem;
 	border-radius: 3.75rem;
 	text-align: center;
 	transition: 0.3s;
@@ -387,109 +384,112 @@ ion-icon {
 /*                                Modal pop up                              */
 /* -------------------------------------------------------------------------- */
 @keyframes animateTop {
-	from{top:-18.75rem;
-		 opacity: 0;}
-	to{top:0;
-	   opacity:1;}
-	
-  }
-  .popup-container{
+	from {
+		top: -18.75rem;
+		opacity: 0;
+	}
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+.popup-container {
 	margin: 6.5% 37%;
-	animation: animateTop 0.8s ;
-  
-  }
-  .modal{
+	animation: animateTop 0.8s;
+}
+.modal {
 	z-index: 1001;
-	display:none;
-	position:fixed;
+	display: none;
+	position: fixed;
 	/* overflow: scroll; */
-	top:50%;
-	left:50%;
-	transform: translate( -50%, -50%);
-	width:100%;
-	height:100%;
-	background-color:hsl(0, 0%, 0%, 0.4)
-  }
-  .Main-Loc-container{
-	display:flex;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	background-color: hsl(0, 0%, 0%, 0.4);
+}
+.Main-Loc-container {
+	display: flex;
 	flex-direction: column;
-	height:8rem;
-  }
-  .Address-Container,.City-State{
+	height: 8rem;
+}
+.Address-Container,
+.City-State {
 	display: flex;
 	column-gap: 5%;
-	height:3rem
+	height: 3rem;
+}
 
-  }
-  
-  .Zip-Container{
+.Zip-Container {
 	flex-direction: column;
-  }
-  .popup-card{
+}
+.popup-card {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	margin: 5% auto;
 	background-color: hsl(0, 0%, 97%);
-	height:31.25rem;
-	width:25rem;
-	padding:6%;
+	height: 31.25rem;
+	width: 25rem;
+	padding: 6%;
 	border-radius: 20px;
-	row-gap:20px
-  }
-  .popup-head{
+	row-gap: 20px;
+}
+.popup-head {
 	display: flex;
 	flex-direction: row;
-	gap:200px;
-  }
-  .Closebtn{
+	gap: 200px;
+}
+.Closebtn {
 	background-color: transparent;
-	border:none;
-	width:20px;
+	border: none;
+	width: 20px;
 	font-size: 30px;
-  }
-  .P-D-btns{
+}
+.P-D-btns {
 	background-color: transparent;
-	border:none;
-  }
-  .popup-card button:hover{
+	border: none;
+}
+.popup-card button:hover {
 	cursor: pointer;
-  }
-  .P-D-btns-container{
+}
+.P-D-btns-container {
 	display: flex;
 	justify-content: space-between;
 	width: 100%;
-	padding:3%;
-	background-color:hsl(0, 0%, 70%);
+	padding: 3%;
+	background-color: hsl(0, 0%, 70%);
 	border-radius: 20px;
-  }
-  .form-container{
+}
+.form-container {
 	display: flex;
 	flex-direction: column;
-	row-gap:20px
+	row-gap: 20px;
 	/* height:100%; */
-  }
-   .form-container input, .form-container select{
-	border:none;
+}
+.form-container input,
+.form-container select {
+	border: none;
 	background-color: hsl(0, 0%, 89%);
-	width:100%;
+	width: 100%;
 	border-radius: 20px;
-	padding:2%;
-  }
-  option:value{
+	padding: 2%;
+}
+option:value {
 	color: hsl(0, 0%, 70%);
-  }
-  .Update-btn{
+}
+.Update-btn {
 	/* display: flex; */
-  
+
 	background-color: #f2e205;
-	width:80%;
-  
+	width: 80%;
+
 	height: fit-content;
-	padding:3%;
-	border:none;
+	padding: 3%;
+	border: none;
 	border-radius: 20px;
-  }
+}
 /* ---------------------------------------------------- */
 /* ------               Footer Section       ---------- */
 /* ---------------------------------------------------- */
