--- a/featured.css
+++ b/featured.css
@@ -1,207 +1,170 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    align-items : center;
-    background-color: #F20530
-    
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	overflow-x: hidden;
+	align-items: center;
+	background-color: #f20530;
 }
 body {
-   
-    position: fixed;
-    height: 100%;
-    width: 100%;
+	position: fixed;
+	height: 100%;
+	width: 100%;
 }
 
 h1 {
-    text-align: center;
-    color: #F2E205;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 45px;
-    margin-top: 50px;
-    text-shadow: 3px 3px 3px black;
+	text-align: center;
+	color: #f2e205;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 45px;
+	margin-top: 50px;
+	text-shadow: 3px 3px 3px black;
 }
-
-
-
 
 .container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 20px;
-    text-align: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
+	padding: 20px;
+	text-align: center;
 }
-
 
 .Fish {
-   
-   width: 30%;
-   max-width: 350px;
-   min-width: 280px;
-   height: auto;
-   margin-bottom: 20px;
-   box-shadow: 5px 10px 18px #6c95e7;
-   border-radius: 15px;
-   background-color: #6c95e7;
-   border: 5px solid #6c95e7;
-   
+	width: 30%;
+	max-width: 350px;
+	min-width: 280px;
+	height: auto;
+	margin-bottom: 20px;
+	box-shadow: 5px 10px 18px #6c95e7;
+	border-radius: 15px;
+	background-color: #6c95e7;
+	border: 5px solid #6c95e7;
 }
 .Fish img {
-    width: 100%;
-    height: 300px;
-
-    border-radius: 15px;
-    
-    
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	border-radius: 15px;
 }
 
 .Fish img:hover {
-    transform: scale(1.1);
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-   
-    
+	transition: 0.4s ease-in-out;
+	cursor: pointer;
+	transform: scale(1.1);
 }
 
 .Fish h3 {
-    color: #F2E205;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px black;
-    background-color: #6c95e7;
-    
+	color: #f2e205;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 30px;
+	text-shadow: 3px 3px 3px black;
+	background-color: #6c95e7;
 }
 
 .Fish p {
-    color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 10px;
-    background-color: #6c95e7;
-    text-shadow: 2px 2px 2px black;
-    
-    
-   
+	color: white;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	margin-top: 10px;
+	background-color: #6c95e7;
+	text-shadow: 2px 2px 2px black;
 }
 .OreoMilkshake {
-   
-   
-    width: 30%;
-   max-width: 350px;
-   min-width: 280px;
-   height: auto;
-   margin-bottom: 20px;
-    box-shadow: 5px 10px 18px #6c95e7;
-    border-radius: 15px;
-    border: 5px solid #6c95e7;
-    background-color: #6c95e7;
-   
+	width: 30%;
+	max-width: 350px;
+	min-width: 280px;
+	height: auto;
+	margin-bottom: 20px;
+	box-shadow: 5px 10px 18px #6c95e7;
+	border-radius: 15px;
+	border: 5px solid #6c95e7;
+	background-color: #6c95e7;
 }
 .OreoMilkshake img {
-    width: 100%;
-    height: 300px;
-   
-    border-radius: 15px;
-    
-   
-    
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+
+	border-radius: 15px;
 }
 
 .OreoMilkshake img:hover {
-    transform: scale(1.1);
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-   
+	transform: scale(1.1);
+	transition: 0.5s ease-in-out;
+	cursor: pointer;
 }
 
 .OreoMilkshake h3 {
-    color: #F2E205;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px black;
-    background-color: #6c95e7;
-    
+	color: #f2e205;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 30px;
+	text-shadow: 3px 3px 3px black;
+	background-color: #6c95e7;
 }
 
 .OreoMilkshake p {
-    color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top: 10px;
-    background-color: #6c95e7;
-    text-shadow: 2px 2px 2px black;
-   
-   
+	color: white;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	margin-top: 10px;
+	background-color: #6c95e7;
+	text-shadow: 2px 2px 2px black;
 }
 
 .SugarCookie {
-   
-    
-    width: 30%;
-   max-width: 350px;
-   min-width: 280px;
-   height: auto;
-   margin-bottom: 20px;
-    box-shadow: 5px 10px 18px #6c95e7;
-    background-color: #6c95e7;
-    border-radius: 15px;
-    border: 5px solid #6c95e7;
-   
+	width: 30%;
+	max-width: 350px;
+	min-width: 280px;
+	height: auto;
+	margin-bottom: 20px;
+	box-shadow: 5px 10px 18px #6c95e7;
+	background-color: #6c95e7;
+	border-radius: 15px;
+	border: 5px solid #6c95e7;
 }
 .SugarCookie img {
-    width: 100%;
-    height: 300px;
-    
-    border-radius: 15px;
-   
-    
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	border-radius: 15px;
 }
 
 .SugarCookie img:hover {
-    transform: scale(1.1);
-    transition: 0.5s ease-in-out;
-    cursor: pointer;
-   
-
+	transform: scale(1.1);
+	transition: 0.5s ease-in-out;
+	cursor: pointer;
 }
 
 .SugarCookie h3 {
-    color: #F2E205;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px black;
-    background-color: #6c95e7;
-    
-    
+	color: #f2e205;
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	font-size: 30px;
+	text-shadow: 3px 3px 3px black;
+	background-color: #6c95e7;
 }
 
 .SugarCookie p {
-    margin-top: 10px;
-    color: white;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #6c95e7;
-    text-shadow: 2px 2px 2px black;
-    
-   
+	margin-top: 10px;
+	color: white;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	background-color: #6c95e7;
+	text-shadow: 2px 2px 2px black;
 }
 
 h4 {
-    color: white;
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #6c95e7;
-    font-size: 30px;
-    text-shadow: 3px 3px 3px black;
+	color: white;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	background-color: #6c95e7;
+	font-size: 30px;
+	text-shadow: 3px 3px 3px black;
 }
 
 .OreoImage img {
-    
-    width:60px;
-    height: 35px;
-    margin-top: 353px;
-    margin-left: 553px;
-    background-color: #6c95e7;
+	width: 60px;
+	height: 35px;
+	margin-top: 353px;
+	margin-left: 553px;
+	background-color: #6c95e7;
 }
 
 .OreoImage {
-    background-color: #6c95e7;
+	background-color: #6c95e7;
 }
