--- a/MenuPage.css
+++ b/MenuPage.css
@@ -8,6 +8,8 @@
 }
 
 html {
+	width: 100%;
+	overflow-x: hidden;
 	scroll-behavior: smooth;
 }
 
@@ -27,7 +29,23 @@ body {
 	height: 100vh;
 	background-color: whitesmoke;
 }
-
+h3 {
+	font-family: 'Arvo', serif;
+	font-weight: 700;
+	line-height: 1.5;
+	font-style: normal;
+	color: #f20530;
+}
+p {
+	font-family: 'Lato', serif;
+	font-weight: 400;
+	font-style: normal;
+}
+a {
+	font-family: 'Lato', serif;
+	font-weight: 600;
+	font-style: normal;
+}
 /* -------------------------------------------------------------------------- */
 /*                                Sticky header                               */
 /* -------------------------------------------------------------------------- */
