--- a/Services.css
+++ b/Services.css
@@ -1,134 +1,457 @@
 * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-    }
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
-    body {
-        background-color: #6c95e7;
-    }
+body {
+	background-color: #f4e11b;
+}
 
-    h1 {
-        text-align: center;
-        margin-top: 50px;
-        font-size: 50px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        color: #F2E205;
-        
-        text-shadow: 1px 1px 1px black;
-    }
+h1 {
+	text-align: center;
+	margin-top: 50px;
+	font-size: 4rem;
+	font-family: 'Arvo', 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+		sans-serif;
+	color: #f2022f;
+	text-transform: uppercase;
 
-    .header {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 20px;
-        
-    }
-    
+	text-shadow: 1px 1px 1px black;
+}
 
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 20px;
+}
 
-    .img-box {
-        height: 250px;
-        width: 400px;
-        object-fit: cover;
-       
-      
-      
-      
-    }
-    .img-box img {
-        width: 100%;
-        height: 100%;
-        
-      
-       
-    }
+.img-box {
+	height: 250px;
+	width: 400px;
+	object-fit: cover;
+	place-self: center;
+	position: flex-start;
+	margin-bottom: 1.5rem;
+}
+.img-box img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	border-top-left-radius: 6px;
+	border-top-right-radius: 6px;
+	border-left: 8px solid red;
+	border-right: 8px solid red;
+}
 
-    .service1 {
-        max-width: 400px;
-        max-height: 400px;
-        margin-top: 5%;
-        position: relative;
-        margin-right: 20px;
-       
-       
-      
-    }
+.service1 {
+	margin-top: 5%;
+	position: relative;
+	margin-right: 5rem;
+}
 
-    .text-box1 {
-        text-align: center;
-    }
+.service1,
+.service2 {
+	max-width: 400px;
+	background-color: white;
+	padding: 4%;
+	padding-top: 0;
+	height: 50rem;
+	width: max-content;
+	max-height: 650px;
+	border-radius: 6px;
+	border: 8px solid red;
+}
 
-    .text-box1 h2 {
-        margin-top: 10px;
-        font-size: 30px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        color: #F2E205;
-        text-shadow: 1px 1px 1px black;
-    }
-    
-    .text-box1 p {
-        color: white;
-        margin-top: 10px;
-        font-size: 20px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        text-shadow: 1px 1px 1px black;
-    }
+.text-box1,
+.text-box2 {
+	text-align: center;
+	margin-top: 5%;
+	padding-top: 1%;
+	border-radius: 6px;
+	height: 300px;
+	display: flex;
+	flex-direction: column;
+	place-content: center;
+}
 
-    .service2 {
-        max-width: 400px;
-        max-height: 400px;
-        margin-top: 5%;
-        position: relative;
-        
-    }
+.text-box1 h2,
+.text-box2 h2 {
+	margin-top: 50px;
+	font-size: 30px;
+	font-family: 'Arvo', 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+		sans-serif;
+	color: #1f4e95;
+	text-transform: uppercase;
+	/* text-shadow: 1px 1px 1px black; */
+}
 
-    .text-box2 {
-        text-align: center;
-    }
+.text-box2 h2 {
+	margin-top: 80px;
+}
 
-    .text-box2 h2 {
-        margin-top: 10px;
-        font-size: 30px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        color: #F2E205;
-        text-shadow: 1px 1px 1px black;
-    }
-    
-    .text-box2 p {
-        color: white;
-        margin-top: 10px;
-        font-size: 20px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        text-shadow: 1px 1px 1px black;
-    }
+.text-box1 p,
+.text-box2 p {
+	color: #333;
+	margin-top: 15px;
+	font-size: 1.4rem;
+	font-family: 'Lato', 'Arial Narrow', Arial, sans-serif;
+	width: 100%;
+	place-self: center;
+	text-align: left;
+	line-height: 1.5;
+	/* text-shadow: 1px 1px 1px black; */
+}
 
-    .service1 , .service2 {
-        display: inline-block;
-        vertical-align: top;
-    }
+.service2 {
+	margin-top: 5%;
+	position: relative;
+}
 
+.service1,
+.service2 {
+	display: inline-block;
+	vertical-align: top;
+}
 
-    .container {
-        justify-self:center;
-       
-      
-        
-        
-    }
+.container {
+	justify-self: center;
+}
 
-    .service1, .service2 {
-        flex-basis: 45%;
-    }
+.service1,
+.service2 {
+	flex-basis: 45%;
+}
 
-    .container h1 {
-        text-align: center;
-    }
+.btn-x {
+	margin-top: 2rem;
+	margin-bottom: 2rem;
+	font-size: 1.1rem;
+	width: max-content;
+	text-wrap: wrap;
+	place-content: center;
+	padding: 0.9rem;
+	font-weight: 600;
+	font-family: 'Lato', serif;
+	border: none;
+	background-color: red;
+	color: white;
+	border-radius: 6px;
+	max-height: 3rem;
+	text-align: center;
+}
 
-    .container img:hover {
-        transform: scale(1.1);
-        transition: 0.5s ease-in-out;
+.service2 .btn-x {
+	margin-top: -5px;
+}
+.btn-x:hover {
+	background-color: rgb(188, 0, 0);
+	transition: 0.2s;
+}
 
-    }
-    
+a {
+	text-decoration: none;
+	font-family: 'Arvo', serif;
+	font-weight: 800;
+}
+
+.container h1 {
+	text-align: center;
+}
+
+.service1:hover,
+.service2:hover {
+	transform: scale(1.1);
+	transition: 0.4s ease-in-out;
+}
+
+footer a {
+	color: hsl(100, 100%, 100%);
+	text-decoration: none;
+}
+footer ion-icon {
+	font-size: 30px;
+	color: hsl(349, 96%, 28%);
+}
+.footer-container {
+	display: flex;
+	overflow: hidden;
+	justify-content: space-evenly;
+	align-items: center;
+	background-color: hsl(349, 96%, 44%);
+	height: 200px;
+	position: relative;
+}
+.about {
+	display: flex;
+	gap: 20px;
+}
+.icon-footer {
+	display: flex;
+	gap: 20px;
+}
+
+.Delivery-Main:active {
+	background-color: red;
+}
+
+.Delivery-Main,
+.Pickup-Main {
+	font-family: 'Lato', serif;
+	font-size: 1rem;
+	font-weight: 600;
+}
+
+.SecretModal {
+	z-index: 1;
+	display: none;
+	position: fixed;
+	/* overflow: scroll; */
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	background-color: hslhsl(0, 0%, 0%, 0.4);
+}
+.secretpopup-container {
+	margin: 6.5% 37%;
+	animation: animateTop 0.8s;
+}
+.SecretCard {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 5% auto;
+	background-color: hsl(0, 0%, 97%);
+	height: 100px;
+	width: 250px;
+	padding: 6%;
+	border-radius: 20px;
+	row-gap: 20px;
+}
+
+footer {
+	margin-top: 10%;
+}
+
+/* -------------------------------------------------------------------------- */
+/*                                Modal pop up                              */
+/* -------------------------------------------------------------------------- */
+@keyframes animateTop {
+	from {
+		top: -300px;
+		opacity: 0;
+	}
+	to {
+		top: 0;
+		opacity: 1;
+	}
+}
+.popup-container {
+	margin: 6.5% 37%;
+	animation: animateTop 0.8s;
+}
+.modal {
+	z-index: 1001;
+	display: none;
+	position: fixed;
+	/* overflow: scroll; */
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 100%;
+	height: 100%;
+	background-color: hsl(0, 0%, 0%, 0.4);
+}
+.popup-card {
+	display: flex;
+	/* overflow: scroll; */
+	flex-direction: column;
+	align-items: center;
+	margin: 5% auto;
+	background-color: hsl(0, 0%, 97%);
+	height: 41.25rem;
+	width: 350px;
+	padding: 6%;
+	border-radius: 20px;
+	row-gap: 20px;
+}
+.popup-head {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	gap: 200px;
+}
+.popup-head h5 {
+	font-family: 'Arvo', 'Lato', serif;
+	justify-self: center;
+	transform: translate(7rem, 0%);
+	font-size: 1.6rem;
+	font-weight: 600;
+	width: 50rem;
+	text-transform: uppercase;
+}
+
+.Closebtn {
+	background-color: transparent;
+	border: none;
+	width: 20px;
+	font-size: 30px;
+	transform: translate(-3.5rem, -1rem);
+	color: #b3b2b2;
+}
+
+.P-D-btns {
+	background-color: transparent;
+	border: none;
+}
+.popup-card button:hover {
+	cursor: pointer;
+}
+.P-D-btns-container {
+	display: flex;
+	justify-content: space-between;
+	width: 100%;
+	padding: 3%;
+	/* background-color: hsl(0, 0%, 70%); */
+	border-radius: 20px;
+}
+
+.P-D-btns-container::after {
+	background-color: yellow;
+}
+
+.info-txt {
+	color: #333;
+	font-family: 'Lato', serif;
+}
+
+/* -------------------------------- ToggleBtn ------------------------------- */
+.toggleCheckbox {
+	display: none;
+}
+
+.toggleContainer {
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	width: 100%;
+	height: 2.5rem;
+	border: 3px solid red;
+	border-radius: 20px;
+	background: white;
+	padding-bottom: 5%;
+	font-weight: bold;
+	color: #343434;
+	cursor: pointer;
+	font-family: 'Arvo', serif;
+	text-transform: uppercase;
+}
+
+.toggleContainer::before {
+	content: '';
+	position: absolute;
+	width: 50%;
+	height: 100%;
+	left: 0%;
+	border-radius: 20px;
+	background: #f2022f;
+	transition: all 0.3s;
+}
+
+.toggleContainer div {
+	padding: 6px;
+	text-align: center;
+	z-index: 1;
+}
+
+.toggleCheckbox:checked + .toggleContainer::before {
+	left: 50%;
+}
+
+.toggleCheckbox:checked + .toggleContainer div:first-child {
+	color: #f2022f;
+	transition: color 0.3s;
+}
+.toggleCheckbox:checked + .toggleContainer div:last-child {
+	color: white;
+	transition: color 0.3s;
+}
+.toggleCheckbox + .toggleContainer div:first-child {
+	color: white;
+	transition: color 0.3s;
+}
+.toggleCheckbox + .toggleContainer div:last-child {
+	color: #f2022f;
+	transition: color 0.3s;
+}
+
+/* ------------------------------ ToggleBtn End ----------------------------- */
+
+.form-container {
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+	font-family: 'Lato', serif;
+
+	/* height:100%; */
+}
+.form-container input,
+.form-container select {
+	border: none;
+	background-color: hsl(0, 0%, 89%);
+	width: 100%;
+	border-radius: 20px;
+	padding: 2%;
+	font-family: 'Lato', serif;
+	margin-top: 5px;
+	color: grey;
+}
+
+.form-container input {
+	font-size: 1.15rem;
+}
+
+.form-container select {
+	font-size: 1rem;
+}
+input[type='text'] {
+	font-size: 1rem;
+}
+
+.form-container h4 {
+	color: #333;
+}
+
+option:value {
+	color: hsl(0, 0%, 70%);
+}
+.Update-Btn {
+	/* display: flex; */
+	/* background-color: #f2e205; */
+	background-color: #f2022f;
+	color: white;
+	font-family: 'Arvo', serif;
+	margin-top: 1rem;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: 1rem;
+	padding: 5%;
+	width: 80%;
+	height: fit-content;
+	padding: 3%;
+	border: none;
+	border-radius: 20px;
+	place-self: center;
+}
+
+.Update-Btn:hover {
+	/* background-color: #ddcf07; */
+	background-color: #d20329;
+}
+.Update-Btn:active {
+	/* background-color: #ccbf08; */
+	background-color: #99041f;
+}
