--- a/catering-form.css
+++ b/catering-form.css
@@ -71,16 +71,17 @@ a {
 	font-weight: 800;
 	color: white;
 	-webkit-text-stroke: 3px #f2022f;
+	margin-bottom: 25px;
 }
 
 .cta-inner button {
 	font-size: 30px;
 	padding: 1rem;
 	width: 20rem;
-	border-radius: .8rem;
+	border-radius: 0.8rem;
 	transition: background-color 0.5s ease;
 	font-weight: 700;
-	border: .25rem solid white;
+	border: 0.25rem solid white;
 	background-color: #f2022f;
 	color: white;
 	text-transform: uppercase;
@@ -187,58 +188,6 @@ a {
 	transform: scale(1.2);
 	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
 	transition: 0.4s;
-}
-
-/* -------------------------------------------------------------------------- */
-/*                            Info Container Styles                           */
-/* -------------------------------------------------------------------------- */
-.info-container {
-	height: 35rem;
-	padding-bottom: 50px;
-}
-
-.info-inner h1 {
-	margin-top: 50px;
-	font-size: 3rem;
-	font-family: 'Arvo', serif;
-	font-weight: 600;
-	color: #f2022f;
-	margin-left: 40px;
-}
-
-.info-inner {
-	width: 50%;
-	padding:2%;
-}
-
-.info-description {
-	font-family: 'Montserrat', serif;
-	font-size: 1.2rem;
-	line-height: 1.5;
-	text-wrap: wrap;
-}
-
-.info-description span {
-	color: #d71d3f;
-	text-decoration: underline;
-}
-
-.info-description span:hover {
-	cursor: pointer;
-}
-
-.info-flex {
-	display: flex;
-}
-
-.info-inner-right img {
-	margin-top: 40px;
-	height: 30rem;
-	width: 25rem;
-	margin-left: 5rem;
-	border: 15px solid #fde944;
-	border-radius: 5px;
-	object-fit: cover;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -356,7 +305,7 @@ a {
 
 .cta-button:hover {
 	background: #d03934;
-} 
+}
 /* -------------------------------------------------------------------------- */
 /*                                Modal pop up                              */
 /* -------------------------------------------------------------------------- */
@@ -659,9 +608,10 @@ body {
 	-webkit-text-stroke: 3px #f2022f;
 }
 
-.cta-inner button {
+.cta-inner .order-nw {
 	/* transform: translate(-150px, -50px); */
-	transform: translateY(-50px);
+
+	transform: translateY(-10px);
 	font-size: 30px;
 	padding: 1rem;
 	width: 20rem;
@@ -680,14 +630,14 @@ body {
 	color: inherit;
 }
 
-.cta-inner button:hover {
+.cta-inner .order-nw:hover {
 	cursor: pointer;
 	background-color: white;
 	color: #f2022f;
 	border: 4px solid #f2022f;
 }
 
-.cta-inner button:active {
+.cta-inner .order-nw:active {
 	background-color: rgb(233, 229, 229);
 	transition: 0s;
 }
@@ -695,8 +645,8 @@ body {
 /* --------------------------------- Navigation --------------------------------- */
 #logo {
 	width: 100px;
+	margin-right: -80px;
 }
-
 .header {
 	display: flex;
 	flex-direction: row;
@@ -717,6 +667,10 @@ body {
 	gap: 40px;
 }
 
+.nav a {
+	max-width: max-content;
+}
+
 .nav a:hover,
 .userNav a:hover {
 	color: #f2e205;
@@ -725,16 +679,29 @@ body {
 	color: white;
 	background-color: transparent;
 	border: none;
+	font-family: 'Lato', serif;
+	font-weight: 600;
+	font-style: normal;
+	font-size: medium;
 }
 .Modalbutton ion-icon {
 	color: #f2e205;
 }
+
+.Modalbutton:hover {
+	color: #f2e205;
+	cursor: pointer;
+}
+
 #Searchbar {
 	border-radius: 20px;
 	background-color: hsl(349, 96%, 45%);
 	border: none;
 	color: white;
 	padding: 10px;
+	width: 50%;
+	margin-left: -30px;
+	margin-right: -50px;
 }
 #Searchbar::placeholder {
 	color: hsl(0, 0%, 70%);
@@ -751,18 +718,19 @@ body {
 }
 #Navbtn {
 	display: flex;
-	color: hsl(100, 100%, 100%);
 	background-color: #f2e205;
 	justify-content: center;
 	border-radius: 10px;
 	width: 120px;
 	padding: 3%;
+	color: rgb(205, 89, 0);
+	font-weight: 900;
 }
 #Navbtn:hover {
-	color: black;
+	color: rgb(205, 89, 0);
 	transform: scale(1.2);
 	box-shadow: 0px 4px 4px #00000030, 0px 12px 12px #00000015;
-	transition: 0.9s;
+	transition: 0.4s;
 }
 
 /* -------------------------------------------------------------------------- */
@@ -779,7 +747,7 @@ body {
 	font-family: 'Arvo', serif;
 	font-weight: 600;
 	color: #f2022f;
-	margin-left: 40px;
+	margin-left: 3px;
 }
 
 .info-inner {
